﻿03/05/2017 - Added comments to Octodiff\CommandLine\SignatureCommand.cs