@@ -1,0 +1,8 @@
+﻿/// <summary>
+/// Stores Rsync stream types
+/// </summary>
+public enum StreamType
+{
+    Signature = 0,
+    Delta = 1,
+}
